[project]
name = "getfactormodels"
version = "0.0.13"
description = "Download datasets for various multifactor asset pricing models."
authors = [
    { name = "S. Martin", email = "x512@pm.me" }
]
exclude = ["**/*.ipynb"]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ['finance', 'asset pricing', 'multifactor models', 'finance',
    'price models', 'financial analysis']
classifiers = [
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
urls = { Homepage = "https://github.com/x512/getfactormodels" }

requires-python = ">=3.10"

dependencies = [
    "pandas>=2.1.4",
    "pyarrow>=22.0.0",
    "diskcache>=5.6.3",
    "httpx (>=0.28.1,<0.29.0)",
    "certifi (>=2025.11.12,<2026.0.0)",
    "python-calamine (>=0.6.1,<0.7.0)",
    "platformdirs (>=4.5.1,<5.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "0.14.8"
pytest-cov = ">=7.0.0"
pytest = "^9.0"
isort = "^7.0"
pytest-randomly = ">=4.0.1"
tox = "4.32.0"

[project.scripts]
getfactormodels = "getfactormodels.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 79
py_version = 312
multi_line_output = 3
include_trailing_comma = true
lines_between_sections = false

[tool.ruff]
line-length = 79
target-version = "py312"
indent-width = 4
respect-gitignore = true
exclude = ["*.ipynb", ".git", ".git-rewrite", "build", "dist"]

[tool.ruff.lint]
select = [ 
    "E", "F", "B", "G", "N", "A", "S", "SIM", "C901", "COM", 
    "UP", "C4", "PT", "LOG", "DTZ", "RET", "ICN", "TID", 
    "FBT", "BLE", "ISC"
]
ignore = ["I", "E501", "ANN", "F401", "W293"]
unfixable = ["B", "FIX001", "FIX002", "UP", "I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"__main__.py" = ["F401"]
"tests/**/*.py" = ["F401", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["getfactormodels"]
omit = [
    "*.ipynb",
    "tests/*",
    "*/__pycache__/*",
    "setup.py",
]
